# arango-etl

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  local.sh  settings.toml.template
.github/workflows/: rust.yml
pkg/: settings-template.toml
src/: arangodb.rs  arangodb_handler.rs  handler.rs  lib.rs  main.rs  redis_handler.rs  settings.rs  tracker.rs  tracker_server.rs
src/cli/: current.rs  history.rs  mod.rs  rehydrate.rs
src/document/: beacon.rs  edge.rs  hotspot.rs  iot_poc_file.rs  loc_data.rs  mod.rs  witness.rs
src/handler/: arangodb.rs  arangodb_handler.rs  mod.rs  redis_handler.rs
