[package]
name = "arango-etl"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = {version = "0", features = ["serde"]}
helium-crypto = {version = "0.6.3"}
helium-proto = {git = "https://github.com/helium/proto", branch = "master", features = ["services"]}
file-store = {git = "https://github.com/helium/oracles", branch = "main"}
futures = "*"
serde =  {version = "1", features=["derive"]}
serde_json = { version = "1", features = [ "std"] }
tokio = { version = "1", features = ["macros"] }
tokio-util = "0"
env_logger = "0.10.0"
clap = {version = "4.2.7", features = ["derive"]}
config = {version="0", default-features=false, features=["toml"]}
tracing = "0"
tracing-subscriber = { version = "0", default-features=false, features = ["env-filter", "registry", "fmt"] }
thiserror = "1"
arangors = "0.5.3"
base64 = "0.21.0"
triggered = "0"
futures-util = "0.3.28"
tokio-graceful-shutdown = "0.12.1"
redis = { version = "0", features = [ "streams", "aio", "tokio-comp" ] }
deadpool-redis = { version = "0", features = [ "rt_tokio_1" ] }
rust_decimal = "1"
h3o = { version = "0.3.2", features = [ "geo" ] }
geojson = "0.24.1"
